[tool.poetry]
name = "project"
version = "0.2.0"
description = ""
authors = ["Efim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.10"
fastapi = "^0.115.2"
pytest = "^8.3.3"
uvicorn = "^0.32.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"